src/jinjaAntlr/JinjaParser.java
// Generated from C:/Users/ru/Desktop/compiler/Compiler_Project/src/jinjaAntlr/JinjaParser.g4 by ANTLR 4.13.2
package jinjaAntlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class JinjaParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		JINJA_BLOCK_START=1, JINJA_EXPR_START=2, TAG_OPEN=3, TAG_CLOSE_START=4, 
		HTML_COMMENT=5, DOCTYPE=6, STYLE_OPEN=7, HTML_TEXT=8, WS=9, TAG_CLOSE=10, 
		TAG_SLASH_CLOSE=11, TAG_ID=12, TAG_EQUALS=13, TAG_ATTR_VALUE=14, TAG_JINJA_BLOCK_START=15, 
		TAG_JINJA_EXPR_START=16, TAG_WS=17, STYLE_CLOSE=18, CSS_COMMENT=19, CSS_STRING=20, 
		CSS_WORD=21, CSS_DOT=22, CSS_NUMBER=23, CSS_COLOR=24, CSS_COLON=25, CSS_OPEN_BRACE=26, 
		CSS_CLOSE_BRACE=27, SEMICOLON=28, CSS_COMMA=29, CSS_LPAREN=30, CSS_RPAREN=31, 
		CSS_WS=32, JINJA_BLOCK_END=33, JINJA_EXPR_END=34, JINJA_EXTENDS=35, JINJA_BLOCK=36, 
		JINJA_ENDBLOCK=37, JINJA_FORMAT=38, JINJA_IF=39, JINJA_FOR=40, JINJA_IN=41, 
		JINJA_ELSE=42, JINJA_ENDIF=43, JINJA_ENDFOR=44, JINJA_TRUE=45, JINJA_FALSE=46, 
		JINJA_NONE=47, JINJA_PIPE=48, JINJA_DOT=49, JINJA_COMMA=50, JINJA_COLON=51, 
		JINJA_EQUALS=52, JINJA_PLUS=53, JINJA_MINUS=54, JINJA_MULT=55, JINJA_DIV=56, 
		JINJA_OPAR=57, JINJA_CPAR=58, JINJA_OBRACK=59, JINJA_CBRACK=60, JINJA_IDENTIFIER=61, 
		JINJA_NUMBER=62, JINJA_STRING=63, JINJA_WS=64, JINJA_COMMENT=65;
	public static final int
		RULE_jinjaProgram = 0, RULE_documentElement = 1, RULE_htmlTag = 2, RULE_htmlAttribute = 3, 
		RULE_attributeValue = 4, RULE_jinjaBlock = 5, RULE_jinjaStatementHeader = 6, 
		RULE_jinjaExpression = 7, RULE_jinjaPrimary = 8, RULE_jinjaIdentifierChain = 9, 
		RULE_jinjaFilter = 10, RULE_jinjaCallArgs = 11, RULE_jinjaArg = 12, RULE_jinjaKwArg = 13, 
		RULE_htmlText = 14, RULE_styleTag = 15, RULE_cssRule = 16, RULE_cssSelectorList = 17, 
		RULE_cssSelector = 18, RULE_selectorPart = 19, RULE_cssProperty = 20, 
		RULE_valueList = 21, RULE_cssValue = 22, RULE_cssFunction = 23;
	private static String[] makeRuleNames() {
		return new String[] {
			"jinjaProgram", "documentElement", "htmlTag", "htmlAttribute", "attributeValue", 
			"jinjaBlock", "jinjaStatementHeader", "jinjaExpression", "jinjaPrimary", 
			"jinjaIdentifierChain", "jinjaFilter", "jinjaCallArgs", "jinjaArg", "jinjaKwArg", 
			"htmlText", "styleTag", "cssRule", "cssSelectorList", "cssSelector", 
			"selectorPart", "cssProperty", "valueList", "cssValue", "cssFunction"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, "'<'", "'</'", null, null, null, null, null, "'>'", 
			"'/>'", null, null, null, null, null, null, "'</style>'", null, null, 
			null, null, null, null, null, "'{'", "'}'", "';'", null, null, null, 
			null, "'%}'", "'}}'", "'extends'", "'block'", "'endblock'", "'format'", 
			"'if'", "'for'", "'in'", "'else'", "'endif'", "'endfor'", "'true'", "'false'", 
			"'none'", "'|'", null, null, null, null, "'+'", "'-'", "'*'", "'/'", 
			null, null, "'['", "']'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "JINJA_BLOCK_START", "JINJA_EXPR_START", "TAG_OPEN", "TAG_CLOSE_START", 
			"HTML_COMMENT", "DOCTYPE", "STYLE_OPEN", "HTML_TEXT", "WS", "TAG_CLOSE", 
			"TAG_SLASH_CLOSE", "TAG_ID", "TAG_EQUALS", "TAG_ATTR_VALUE", "TAG_JINJA_BLOCK_START", 
			"TAG_JINJA_EXPR_START", "TAG_WS", "STYLE_CLOSE", "CSS_COMMENT", "CSS_STRING", 
			"CSS_WORD", "CSS_DOT", "CSS_NUMBER", "CSS_COLOR", "CSS_COLON", "CSS_OPEN_BRACE", 
			"CSS_CLOSE_BRACE", "SEMICOLON", "CSS_COMMA", "CSS_LPAREN", "CSS_RPAREN", 
			"CSS_WS", "JINJA_BLOCK_END", "JINJA_EXPR_END", "JINJA_EXTENDS", "JINJA_BLOCK", 
			"JINJA_ENDBLOCK", "JINJA_FORMAT", "JINJA_IF", "JINJA_FOR", "JINJA_IN", 
			"JINJA_ELSE", "JINJA_ENDIF", "JINJA_ENDFOR", "JINJA_TRUE", "JINJA_FALSE", 
			"JINJA_NONE", "JINJA_PIPE", "JINJA_DOT", "JINJA_COMMA", "JINJA_COLON", 
			"JINJA_EQUALS", "JINJA_PLUS", "JINJA_MINUS", "JINJA_MULT", "JINJA_DIV", 
			"JINJA_OPAR", "JINJA_CPAR", "JINJA_OBRACK", "JINJA_CBRACK", "JINJA_IDENTIFIER", 
			"JINJA_NUMBER", "JINJA_STRING", "JINJA_WS", "JINJA_COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "JinjaParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public JinjaParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class JinjaProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(JinjaParser.EOF, 0); }
		public List<DocumentElementContext> documentElement() {
			return getRuleContexts(DocumentElementContext.class);
		}
		public DocumentElementContext documentElement(int i) {
			return getRuleContext(DocumentElementContext.class,i);
		}
		public JinjaProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_jinjaProgram; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JinjaParserListener ) ((JinjaParserListener)listener).enterJinjaProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JinjaParserListener ) ((JinjaParserListener)listener).exitJinjaProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JinjaParserVisitor ) return ((JinjaParserVisitor<? extends T>)visitor).visitJinjaProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final JinjaProgramContext jinjaProgram() throws RecognitionException {
		JinjaProgramContext _localctx = new JinjaProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_jinjaProgram);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(51);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 98702L) != 0)) {
				{
				{
				setState(48);
				documentElement();
				}
				}
				setState(53);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(54);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DocumentElementContext extends ParserRuleContext {
		public StyleTagContext styleTag() {
			return getRuleContext(StyleTagContext.class,0);
		}
		public JinjaBlockContext jinjaBlock() {
			return getRuleContext(JinjaBlockContext.class,0);
		}
		public HtmlTagContext htmlTag() {
			return getRuleContext(HtmlTagContext.class,0);
		}
		public HtmlTextContext htmlText() {
			return getRuleContext(HtmlTextContext.class,0);
		}
		public DocumentElementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_documentElement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JinjaParserListener ) ((JinjaParserListener)listener).enterDocumentElement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JinjaParserListener ) ((JinjaParserListener)listener).exitDocumentElement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JinjaParserVisitor ) return ((JinjaParserVisitor<? extends T>)visitor).visitDocumentElement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DocumentElementContext documentElement() throws RecognitionException {
		DocumentElementContext _localctx = new DocumentElementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_documentElement);
		try {
			setState(60);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case STYLE_OPEN:
				enterOuterAlt(_localctx, 1);
				{
				setState(56);
				styleTag();
				}
				break;
			case JINJA_BLOCK_START:
			case JINJA_EXPR_START:
			case TAG_JINJA_BLOCK_START:
			case TAG_JINJA_EXPR_START:
				enterOuterAlt(_localctx, 2);
				{
				setState(57);
				jinjaBlock();
				}
				break;
			case TAG_OPEN:
				enterOuterAlt(_localctx, 3);
				{
				setState(58);
				htmlTag();
				}
				break;
			case HTML_TEXT:
				enterOuterAlt(_localctx, 4);
				{
				setState(59);
				htmlText();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class HtmlTagContext extends ParserRuleContext {
		public HtmlTagContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_htmlTag; }
	 
		public HtmlTagContext() { }
		public void copyFrom(HtmlTagContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class PairedTagContext extends HtmlTagContext {
		public TerminalNode TAG_OPEN() { return getToken(JinjaParser.TAG_OPEN, 0); }
		public List<TerminalNode> TAG_ID() { return getTokens(JinjaParser.TAG_ID); }
		public TerminalNode TAG_ID(int i) {
			return getToken(JinjaParser.TAG_ID, i);
		}
		public List<TerminalNode> TAG_CLOSE() { return getTokens(JinjaParser.TAG_CLOSE); }
		public TerminalNode TAG_CLOSE(int i) {
			return getToken(JinjaParser.TAG_CLOSE, i);
		}
		public TerminalNode TAG_CLOSE_START() { return getToken(JinjaParser.TAG_CLOSE_START, 0); }
		public List<HtmlAttributeContext> htmlAttribute() {
			return getRuleContexts(HtmlAttributeContext.class);
		}
		public HtmlAttributeContext htmlAttribute(int i) {
			return getRuleContext(HtmlAttributeContext.class,i);
		}
		public List<DocumentElementContext> documentElement() {
			return getRuleContexts(DocumentElementContext.class);
		}
		public DocumentElementContext documentElement(int i) {
			return getRuleContext(DocumentElementContext.class,i);
		}
		public PairedTagContext(HtmlTagContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JinjaParserListener ) ((JinjaParserListener)listener).enterPairedTag(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JinjaParserListener ) ((JinjaParserListener)listener).exitPairedTag(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JinjaParserVisitor ) return ((JinjaParserVisitor<? extends T>)visitor).visitPairedTag(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class SelfClosingTagContext extends HtmlTagContext {
		public TerminalNode TAG_OPEN() { return getToken(JinjaParser.TAG_OPEN, 0); }
		public TerminalNode TAG_ID() { return getToken(JinjaParser.TAG_ID, 0); }
		public TerminalNode TAG_SLASH_CLOSE() { return getToken(JinjaParser.TAG_SLASH_CLOSE, 0); }
		public List<HtmlAttributeContext> htmlAttribute() {
			return getRuleContexts(HtmlAttributeContext.class);
		}
		public HtmlAttributeContext htmlAttribute(int i) {
			return getRuleContext(HtmlAttributeContext.class,i);
		}
		public SelfClosingTagContext(HtmlTagContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JinjaParserListener ) ((JinjaParserListener)listener).enterSelfClosingTag(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JinjaParserListener ) ((JinjaParserListener)listener).exitSelfClosingTag(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JinjaParserVisitor ) return ((JinjaParserVisitor<? extends T>)visitor).visitSelfClosingTag(this);
			else return visitor.visitChildren(this);
		}
	}

	public final HtmlTagContext htmlTag() throws RecognitionException {
		HtmlTagContext _localctx = new HtmlTagContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_htmlTag);
		int _la;
		try {
			setState(89);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				_localctx = new PairedTagContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(62);
				match(TAG_OPEN);
				setState(63);
				match(TAG_ID);
				setState(67);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 102406L) != 0)) {
					{
					{
					setState(64);
					htmlAttribute();
					}
					}
					setState(69);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(70);
				match(TAG_CLOSE);
				setState(74);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 98702L) != 0)) {
					{
					{
					setState(71);
					documentElement();
					}
					}
					setState(76);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(77);
				match(TAG_CLOSE_START);
				setState(78);
				match(TAG_ID);
				setState(79);
				match(TAG_CLOSE);
				}
				break;
			case 2:
				_localctx = new SelfClosingTagContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(80);
				match(TAG_OPEN);
				setState(81);
				match(TAG_ID);
				setState(85);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 102406L) != 0)) {
					{
					{
					setState(82);
					htmlAttribute();
					}
					}
					setState(87);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(88);
				match(TAG_SLASH_CLOSE);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class HtmlAttributeContext extends ParserRuleContext {
		public HtmlAttributeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_htmlAttribute; }
	 
		public HtmlAttributeContext() { }
		public void copyFrom(HtmlAttributeContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class JinjaAttributeContext extends HtmlAttributeContext {
		public JinjaBlockContext jinjaBlock() {
			return getRuleContext(JinjaBlockContext.class,0);
		}
		public JinjaAttributeContext(HtmlAttributeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JinjaParserListener ) ((JinjaParserListener)listener).enterJinjaAttribute(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JinjaParserListener ) ((JinjaParserListener)listener).exitJinjaAttribute(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JinjaParserVisitor ) return ((JinjaParserVisitor<? extends T>)visitor).visitJinjaAttribute(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class NormalAttributeContext extends HtmlAttributeContext {
		public TerminalNode TAG_ID() { return getToken(JinjaParser.TAG_ID, 0); }
		public TerminalNode TAG_EQUALS() { return getToken(JinjaParser.TAG_EQUALS, 0); }
		public AttributeValueContext attributeValue() {
			return getRuleContext(AttributeValueContext.class,0);
		}
		public NormalAttributeContext(HtmlAttributeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JinjaParserListener ) ((JinjaParserListener)listener).enterNormalAttribute(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JinjaParserListener ) ((JinjaParserListener)listener).exitNormalAttribute(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JinjaParserVisitor ) return ((JinjaParserVisitor<? extends T>)visitor).visitNormalAttribute(this);
			else return visitor.visitChildren(this);
		}
	}

	public final HtmlAttributeContext htmlAttribute() throws RecognitionException {
		HtmlAttributeContext _localctx = new HtmlAttributeContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_htmlAttribute);
		int _la;
		try {
			setState(97);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case TAG_ID:
				_localctx = new NormalAttributeContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(91);
				match(TAG_ID);
				setState(94);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==TAG_EQUALS) {
					{
					setState(92);
					match(TAG_EQUALS);
					setState(93);
					attributeValue();
					}
				}

				}
				break;
			case JINJA_BLOCK_START:
			case JINJA_EXPR_START:
			case TAG_JINJA_BLOCK_START:
			case TAG_JINJA_EXPR_START:
				_localctx = new JinjaAttributeContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(96);
				jinjaBlock();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AttributeValueContext extends ParserRuleContext {
		public AttributeValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_attributeValue; }
	 
		public AttributeValueContext() { }
		public void copyFrom(AttributeValueContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class PlainValueContext extends AttributeValueContext {
		public TerminalNode TAG_ATTR_VALUE() { return getToken(JinjaParser.TAG_ATTR_VALUE, 0); }
		public PlainValueContext(AttributeValueContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JinjaParserListener ) ((JinjaParserListener)listener).enterPlainValue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JinjaParserListener ) ((JinjaParserListener)listener).exitPlainValue(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JinjaParserVisitor ) return ((JinjaParserVisitor<? extends T>)visitor).visitPlainValue(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class JinjaValueExprContext extends AttributeValueContext {
		public JinjaBlockContext jinjaBlock() {
			return getRuleContext(JinjaBlockContext.class,0);
		}
		public JinjaValueExprContext(AttributeValueContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JinjaParserListener ) ((JinjaParserListener)listener).enterJinjaValueExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JinjaParserListener ) ((JinjaParserListener)listener).exitJinjaValueExpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JinjaParserVisitor ) return ((JinjaParserVisitor<? extends T>)visitor).visitJinjaValueExpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AttributeValueContext attributeValue() throws RecognitionException {
		AttributeValueContext _localctx = new AttributeValueContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_attributeValue);
		try {
			setState(101);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case TAG_ATTR_VALUE:
				_localctx = new PlainValueContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(99);
				match(TAG_ATTR_VALUE);
				}
				break;
			case JINJA_BLOCK_START:
			case JINJA_EXPR_START:
			case TAG_JINJA_BLOCK_START:
			case TAG_JINJA_EXPR_START:
				_localctx = new JinjaValueExprContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(100);
				jinjaBlock();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class JinjaBlockContext extends ParserRuleContext {
		public JinjaBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_jinjaBlock; }
	 
		public JinjaBlockContext() { }
		public void copyFrom(JinjaBlockContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ControlBlockContext extends JinjaBlockContext {
		public JinjaStatementHeaderContext jinjaStatementHeader() {
			return getRuleContext(JinjaStatementHeaderContext.class,0);
		}
		public TerminalNode JINJA_BLOCK_END() { return getToken(JinjaParser.JINJA_BLOCK_END, 0); }
		public TerminalNode JINJA_BLOCK_START() { return getToken(JinjaParser.JINJA_BLOCK_START, 0); }
		public TerminalNode TAG_JINJA_BLOCK_START() { return getToken(JinjaParser.TAG_JINJA_BLOCK_START, 0); }
		public ControlBlockContext(JinjaBlockContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JinjaParserListener ) ((JinjaParserListener)listener).enterControlBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JinjaParserListener ) ((JinjaParserListener)listener).exitControlBlock(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JinjaParserVisitor ) return ((JinjaParserVisitor<? extends T>)visitor).visitControlBlock(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class PrintBlockContext extends JinjaBlockContext {
		public JinjaExpressionContext jinjaExpression() {
			return getRuleContext(JinjaExpressionContext.class,0);
		}
		public TerminalNode JINJA_EXPR_END() { return getToken(JinjaParser.JINJA_EXPR_END, 0); }
		public TerminalNode JINJA_EXPR_START() { return getToken(JinjaParser.JINJA_EXPR_START, 0); }
		public TerminalNode TAG_JINJA_EXPR_START() { return getToken(JinjaParser.TAG_JINJA_EXPR_START, 0); }
		public PrintBlockContext(JinjaBlockContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JinjaParserListener ) ((JinjaParserListener)listener).enterPrintBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JinjaParserListener ) ((JinjaParserListener)listener).exitPrintBlock(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JinjaParserVisitor ) return ((JinjaParserVisitor<? extends T>)visitor).visitPrintBlock(this);
			else return visitor.visitChildren(this);
		}
	}
